fix dashboard overflow

--- a/client/styles/Dashboard.module.scss
+++ b/client/styles/Dashboard.module.scss
@@ -46,7 +46,7 @@
 }
 
 .listContainer{
-    padding: 0.5rem;
+    padding-bottom: 5rem;
 }
 
 .habitsList{
